# FootballAnalytics

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  football-analytics-planning-prompt.md  player_registry.json
.claude/: settings.json
.claude/hooks/: analyze-session.py  guard.sh  log-skill.sh  session-start.sh
.claude/shared-references/: REFERENCE-INDEX.md
.claude/shared-references/design/: claude-design-handoff-guide.md  pizza-chart-visual-spec.md
.claude/shared-references/fbref/: soccerdata-recipes.md  table-guide.md
.claude/shared-references/metrics/: metric-definitions.md  position-matrix.md
.libs/football_core/: pyproject.toml
.libs/football_core/football_core/: __init__.py  config.py  fetcher.py  metrics.py  models.py  percentiles.py  pipeline.py  pipeline_profile.py  renderer.py
.libs/football_core/football_core/sources/: __init__.py  fbref.py  footystats.py  merger.py  one_versus_one.py  sofascore.py  transfermarkt.py  understat.py  whoscored.py
backend/: db.py  pyproject.toml
backend/app/: main.py  main_analysis.py
backend/app/routers/: analysis.py  clusters.py  player.py  profile.py
backend/app/services/: chart_service.py  data_service.py  llm_extractor.py  match_catalogue.py  match_data_fetcher.py  (+2 more)
backend/scripts/: build_player_db.py  build_roles.py  bulk_tm_scraper.py  enrich_positions.py  inspect_db.py  run_extraction.py  seed_db.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
references/: season-level player dashboard.md
tests/: conftest.py  test_db.py  test_match_catalogue.py  test_match_data_fetcher.py
(+26 files in other folders)
