[project]
name = "football-core"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
    "soccerdata>=1.4",
    "pandas>=2.0",
    "scipy>=1.11",
    "mplsoccer>=1.2",
    "matplotlib>=3.8",
    "fastapi>=0.110",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["football_core*"]
